# freebsd_pkg_plugins

./: .gitignore  CMakeLists.txt  CommonFind.cmake  FindRE2C.cmake  Findpkg.cmake  README.md  common.h
error/: CMakeLists.txt  error.c
kissc/: ascii.h  ascii_case.c  defs.h  dlist.c  dlist.h  hashtable.c  hashtable.h  iterator.c  iterator.h  parsenum.c  parsenum.h  stpcpy_sp.c  stpcpy_sp.h
plugins/: CMakeLists.txt
plugins/history/: CMakeLists.txt  README.md  config.h.in  date.h  date.re  date_scanner.gen.c  plugin_history.c  test_date.c
plugins/integrity/: CMakeLists.txt  README.md  hooks.h  plugin_integrity.c
plugins/services/: CMakeLists.txt  README.md  plugin_services.c  private_rcorder.h  process_monitor.c  process_monitor.h  rcorder.c  rcorder.h  services.h  services_db.c  services_result.c  services_selection.c
plugins/verbose/: CMakeLists.txt  plugin_verbose.c
plugins/zfs_integration/: CMakeLists.txt  README.md  backup_method.h  be_method.c  config.h.in  hooks.h  none_method.c  patch-libpkg_plugins.c  plugin_zfs_integration.c  probe.c  probe.h  raw_zfs_method.c  retention.c  retention.h  selection.c  selection.h  snapshot.c  snapshot.h  zfs.c  zfs.h
shared/: argv.c  argv.h  compat.c  compat.h  os.c  os.h  path_join.c  path_join.h
sqlite/: CMakeLists.txt  FindSQLite3.cmake  sqlite.c  sqlite.h
usr/ports/devel/re2c/: Makefile  distinfo  pkg-plist
usr/ports/ports-mgmt/pkg_history/: Makefile  distinfo  pkg-descr  pkg-message
usr/ports/ports-mgmt/pkg_services/: Makefile  distinfo  pkg-descr  pkg-message
usr/ports/ports-mgmt/pkg_zint/: Makefile  distinfo  pkg-descr  pkg-message
