cmake_minimum_required(VERSION 2.8.3...3.20.5)

project(pkg_plugins C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED TRUE)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Wwrite-strings -Wstrict-prototypes -Wuninitialized -Wunreachable-code -Wno-comment -Wnonnull -Wunreachable-code")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DDEBUG")

#message("CMAKE_BUILD_TYPE = ${CMAKE_BUILD_TYPE}")
#message("CMAKE_C_FLAGS_DEBUG = ${CMAKE_C_FLAGS_DEBUG}")

set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})

set(AVAILABLE_PLUGINS "history" "verbose" "services" "zint")
if(DEFINED PLUGINS)
    separate_arguments(PLUGINS)
endif(DEFINED PLUGINS)
foreach(PLUGIN_NAME ${AVAILABLE_PLUGINS})
    string(TOUPPER "${PLUGIN_NAME}" UPPER_CASED_PLUGIN_NAME)
    if((NOT DEFINED PLUGINS) OR (PLUGIN_NAME IN_LIST PLUGINS))
        set(WITH_${UPPER_CASED_PLUGIN_NAME}_PLUGIN TRUE)
    else((NOT DEFINED PLUGINS) OR (PLUGIN_NAME IN_LIST PLUGINS))
        set(WITH_${UPPER_CASED_PLUGIN_NAME}_PLUGIN FALSE)
    endif((NOT DEFINED PLUGINS) OR (PLUGIN_NAME IN_LIST PLUGINS))
endforeach(PLUGIN_NAME)
#message("WITH_ZINT_PLUGIN = ${WITH_ZINT_PLUGIN}")
#message("WITH_HISTORY_PLUGIN = ${WITH_HISTORY_PLUGIN}")
#message("WITH_VERBOSE_PLUGIN = ${WITH_VERBOSE_PLUGIN}")
#message("WITH_SERVICES_PLUGIN = ${WITH_SERVICES_PLUGIN}")

if(WITH_HISTORY_PLUGIN)
    set(SQLITE_REQUIRED TRUE)
endif(WITH_HISTORY_PLUGIN)

find_package(pkg REQUIRED)

function(println)
    message("==============================")
endfunction(println)

function(debug PREFIX)
    set(SUFFIXES "FOUND" "VERSION" "VERSION_MAJOR" "VERSION_MINOR" "VERSION_PATCH" "LIBRARY" "LIBRARIES" "INCLUDE_DIR" "INCLUDE_DIRS")
#     list(APPEND SUFFIXES "FIND_VERSION" "FIND_VERSION_EXACT" "FIND_COMPONENTS" "FIND_REQUIRED" "FIND_QUIETLY")
    if(MSVC)
        list(APPEND SUFFIXES "LIBRARY_RELEASE" "LIBRARY_DEBUG")
    endif(MSVC)
    foreach(SUFFIX ${SUFFIXES})
        if(DEFINED ${PREFIX}_${SUFFIX})
            message("${PREFIX}_${SUFFIX} = ${${PREFIX}_${SUFFIX}}")
        else(DEFINED ${PREFIX}_${SUFFIX})
            message("${PREFIX}_${SUFFIX} = <UNDEFINED>")
        endif(DEFINED ${PREFIX}_${SUFFIX})
    endforeach(SUFFIX)
    println()
endfunction(debug)

add_subdirectory(error)
if(SQLITE_REQUIRED)
    add_subdirectory(sqlite)
endif(SQLITE_REQUIRED)
add_subdirectory(plugins)
