cmake_minimum_required(VERSION 2.8.3...3.20.5)

if(WITH_HISTORY_PLUGIN)
    add_subdirectory(history)
endif(WITH_HISTORY_PLUGIN)
if(CMAKE_SYSTEM_NAME STREQUAL "FreeBSD")
    if(WITH_SERVICES_PLUGIN)
        add_subdirectory(services)
    endif(WITH_SERVICES_PLUGIN)
    if(WITH_ZINT_PLUGIN)
        add_subdirectory(zfs_integration)
    endif(WITH_ZINT_PLUGIN)
endif(CMAKE_SYSTEM_NAME STREQUAL "FreeBSD")
if(WITH_VERBOSE_PLUGIN)
    add_subdirectory(verbose)
endif(WITH_VERBOSE_PLUGIN)
